fix wrap on thumbs

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -22,6 +22,8 @@
 
 ul.avatars {
   margin-top: 0px;
+  width: 400px;
+  float: right;
 
   li.avatar {
     padding: 5px 6px 6px 5px;
