--- a/app/assets/stylesheets/z-responsive.css.scss
+++ b/app/assets/stylesheets/z-responsive.css.scss
@@ -3,6 +3,11 @@
 }
 
 @media (max-width: 480px) {
+  ul.avatars {
+  width: 100%;
+  float: none;
+  }
+
   .flash-notice { 
     margin-bottom: 0px; 
     border: 0;
